@@ -210,6 +210,7 @@ public:
     void addPreset(VCXYPadPreset const& preset);
     void resetPresets();
     QList<VCXYPadPreset *> presets() const;
+    QMap<quint32,QString> presetsMap() const;
 
 protected:
     void updateSceneChannel(FadeChannel *fc, uchar value);
