@@ -8,6 +8,7 @@ qlcplus (4.13.1) stable; urgency=low
   * Virtual Console/Slider: add an optional button to flash in playback mode
   * Virtual Console/XY Pad: copy presets when cloning (thanks to Hans-Jürgen Tappe)
   * Plugins/DMX USB: restore Vince DMX512 output (thanks to Jérôme Lebleu)
+  * Web Access: added getWidgetSubIdList API and Animation widget sub-control example (API test page updated)
   * New fixtures: beamZ BAC500 and BAC506 (thanks to Olivier Michel)
   * New fixtures: American DJ Par Z4, beamZ SB400, OXO ColorBeam 7 FCW IR, Pro-Lights Pixie Spot (thanks to Dmitry Kolesnikov)
   * New fixtures: BoomToneDJ LED PAR 7X10W 5in1, BoomToneDJ Maxi Spot 60, Mac Mah FLAT PAR 7x12W 6in1, Eurolite LED PIX-16 QCL Bar (thanks to Cédric Monféfoul)
